[package]
name = "lighter-derive"
version = "0.1.0"
authors = ["Milkey Mouse <milkeymouse@meme.institute>"]
edition = "2021"
description = "Procedural macros for the lighter crate"
readme = "../README.md"
repository = "https://github.com/milkey-mouse/lighter"
license = "CC0-1.0"
keywords = ["match", "string", "bytes", "trie", "optimization"]
categories = ["data-structures", "no-std", "parsing", "rust-patterns", "text-processing"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
proc-macro-crate = "1.1"
quote = "1.0"
syn = { version = "1.0", features = ["full", "extra-traits"] }

[features]
default = ["std"]
std = []
