[package]
name = "lighter"
version = "0.1.0"
edition = "2021"

# TODO
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full", "extra-traits"] } # TODO: extra-traits only needed for debugging
proc-macro2 = "1.0"
